WIP - in getting the spacing correct.

--- a/packages/kiwi-react/src/bricks/Chip.css
+++ b/packages/kiwi-react/src/bricks/Chip.css
@@ -6,8 +6,8 @@
 	@layer base {
 		display: inline-flex;
 		align-items: center;
-		padding-block: 0.25rem;
-		padding-inline: 0.5rem;
+		padding-block: var(--kiwi-chip-padding-block, 0.25rem);
+		padding-inline: var(--kiwi-chip-padding-inline, 0.5rem);
 		gap: 0.25rem;
 
 		border-radius: 9999px;
@@ -28,6 +28,7 @@
 .🥝-chip-dismiss-button:is(.🥝-icon-button) {
 	@layer base {
 		border-radius: inherit;
-		margin: -5;
+		margin-inline: calc(-1 * var(--kiwi-chip-padding-inline, 0.5rem));
+		margin-block: calc(-1 * var(--kiwi-chip-padding-block, 0.25rem));
 	}
 }
